app/assets/sass/ail.scss
/* Definitions for AiL - Site based on Gumby */
@charset "UTF-8";
@import url(//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
@import 'gumby/gumby';
@import 'jquery.bxslider';

$font-family:  'Source Sans Pro', sans-serif !important;
$body-font-color: #000;

$color_head: #d2dc00;
$color_one: #42abcb;
$color_two: #ff9d1e;
$color_three: #ca2162;
$color_page_bg: #ffffff;
$font_color_head: #17297c;
$color_heading: #666666;
$color_soft_margin: #c5baa6;
$color_footer: #a2a2a2;

$header_height: 128px;
$nav_height: 60px;

$semibold: 600;

body, p, div {
  color: #000;
  font-weight: normal;
}
body h1,
body h2,
body h3 {
  color: #000;
}

section {
  div {
    font-size: 1.12em;
  }
  .four.columns,
  .six.columns {
    font-size: 0.75em;
    padding: 0 1em;
  }
  .eight.columns {
    font-size: 0.75em;
  }
  div.columns {
    margin: 1.5em 0;
  }
}

section > h1,
section > div > h1,
.row > h1,
section header h1 {
  margin: 30px auto 20px;
  min-width: 320px;
  padding-left: 20px;
  padding-right: 20px;
  width: 100%;
  font-size: 2.25em;
  font-weight: $semibold;
  color: #fff;
  background-color: $color_footer;
}
.row > h1,
.row > h2,
.row > h3,
section header > h1 {
  text-align: center;
}
.row > h1:first-child,
.row > h2:first-child,
.row > h3:first-child {
  margin-top: 1.8em;
}
.row h3 {
  /* font-weight: $semibold; */
  font-size: 1.625em;
}

body a {
  color: $color_one;
  text-decoration: underline;
}
body a:hover {
  color: $color_two;
}
/* Links in Text Body */
body section div {
  a {
    color: $color_one;
    font-weight: $semibold;
  }
  a:hover {
    color: $font_color_head;
  }
  a:after {
    font-family: "#{$icons}";
    font-size: 0.8em;
    content: " #{$entypo-icon-fast-forward}";
  }
}

/* Table-Colors */

table thead {
  background-color: $color_one;
  color: #FFFFFF;
}
table tbody tr td:first-child {
  background-color: #ddeff0;
}
table tbody tr:nth-child(even) td:first-child {
  background-color: #c0e1eb; /* #b4d6e0; */
}
table tbody tr:nth-child(even) td {
  background-color: #f1f1f1;
}

/* Content Lists */
section.row ul {
  margin: 0.5em 0;
}
section.row ul li {
  padding-left: 1.625em;
}
section.row ul li:before {
  font-family: "#{$icons}";
  font-size: 120%;
  margin-left: -1.25em;
  margin-right: 0.5em;
  color: $color_one;
  content: " #{$entypo-icon-check}";
}
/* These styles do not apply to: slideshows and tiles */
section.slideshow.row ul li:before,
section.row ul.tiles li:before,
section.row form ul li:before,
section.row ul.form li:before,
section.row ul li.field:before {
  content: '';
  margin: 0;
}
section.slideshow.row ul li,
section.row ul.tiles li,
section.row form ul li,
section.row ul.form li,
section.row ul li.field {
  padding-left: 0;
}

/* Float all body content */
body > header {
  float: left;
}

/* Content-Images */
section .column img {
  width: 100%;
  float: left;
  clear: both;
}
section .column img.left {
  width: 65%;
  float: left;
  clear: none;
}
section .column img.right {
  width: 65%;
  float: right;
  clear: none;
}
section .column img.small {
  width: 31.9%;
}


/* Header */
body > header {
  position: relative;
  background-color: $color_head;
  height: $header_height + $nav_height - 5px;
  width: 100%;
}
header #identity {
  float: left;
  height: $header_height - 5px;
  padding: 5px 4% 0;
  hgroup {
    padding-top: 1.2em;
    padding-left: 0.75em;
    max-width: 700px;
    h1 {
      width: 100%;
      font-size: 2.45em;
      color: $color_page_bg;
      font-weight: $semibold;
      /* font-weight: bold; */
      /* text-shadow: 0 1px 2px #181f3c, 0 1px 0 #181f3c; */
      padding-bottom: 0;
      text-align: left;
    }
    h2 {
      font-size: 1.25em;
      font-weight: bold;
      color: #fff;
      padding-top: 0.15em;
      text-align: left;
    }
  }
  div * {
    float: left;
  }
}
header {
  #direct_access {
    position: absolute;
    top: 43px;
    right: 2%;
    width: 320px;
    li {
      border-left: 1px solid $font_color_head;
      padding: 0 0.45em;
      display: inline;
    }
    li:nth-child(1) {
      border-left: 0;
    }
  }
  a, a:visited {
    color: $font_color_head;
    font-size: 1em;
    line-height: 1.05em;
    font-weight: $semibold;
    text-decoration: none;
  }
  a:hover {
    color: $color_page_bg;
  }
}

/* Top Menu
*  override Gumby's way of using the height property and restricting overflows
*  to enable a three-level navigation menu */
#main_nav.navbar {
  float: left;
  clear: left;
  width: 100%;
  text-align: center;
  max-width: none !important;
  height: $nav_height;
  max-height: $nav_height;
  position: relative;
  z-index: 500;
  background-color: $color_one;
  > ul {
    display: inline-block;
    width: auto;
    margin: 0 auto;
    height: $nav_height;
    > li {
      line-height: $nav_height;
      > a {
        height: $nav_height;
      }
    }
  }
  ul li {
    line-height: 1.1em;
    max-width: 220px;
    > a {
      border: none 0px;
      border-radius: none;
      font-size: 1em;
      font-weight: $semibold;
      text-shadow: none;
      text-decoration: none;
      overflow: hidden;
    }
  }
  ul li a, ul li a:hover, ul li a:visited {
    color: #fff;
  }
  ul li.active > a, ul li a:hover, ul li.current > a,
  .dropdown ul li.active > a, .dropdown ul li a:hover,
  ul li:hover > a
  {
    background-color: $color_head !important;
  }
  .dropdown {
    overflow: visible !important;
    height: auto !important;
    display: none;
    border: none 0px;
    max-width: 220px;
    background-color: transparent;
    ul {
      padding: 0;
      li {
        line-height: 1.1em;
      }
    }
    li a {
      opacity: 0.9;
      background-color: $color_one;
      border-radius: none;
    }
    li.active > a, li:hover > a {
      opacity: 1;
    }
    li.active .dropdown a {
      background-color: $color_one;
    }
    .dropdown {
      display: none;
      background-color: transparent;
    }
    .subnav {
      overflow: visible !important;
    }
    ul li:hover > .dropdown {
      display: inline-block;
    }
  }
  ul li:hover > .dropdown {
    display: block;
  }
}

section.slideshow.row,
section.slideshow header.row,
section.teaser header.row,
footer.row {
  max-width: none !important;
  width: 100% !important;
  padding: 0;
}

/* Slideshow and Picture Teasers */
section {
  .slide-caption {
    display: block;
    position: absolute;
    bottom: 0;
    text-align: center;
    width: 100%;
    padding: 0.35em 0;
    font-size: 2em;
    font-weight: normal;
    color: #fff;
  }
}

section.slideshow,
section.teaser {
  position: relative;
  margin: 0 !important;
  padding: 0 !important;
  border-bottom: 10px solid;
  .bx-wrapper {
    ul, li {
      margin: 0;
      padding: 0;
    }
    .bx-pager {
      width: 160px; /* fixed width to allow auto margin centering */
    }
  }
}
section.slideshow {
  border-bottom-color: $color_two;
  header {
    background-color: $color_heading;
  }
  .slide-caption {
    background: transparent url('/images/ail/heading_bg.png') repeat top left;
  }
}
section.slideshow + section.teaser,
section:nth-of-type(2).teaser,
section:nth-of_type(6).teaser {
  border-bottom-color: $color_three;
}
section:nth-of-type(3).teaser,
section:nth-of-type(7).teaser {
  border-bottom-color: $color_head;
}
section:nth-of-type(4).teaser,
section:nth-of-type(8).teaser {
  border-bottom-color: $color_one;
}
section:nth-of-type(5).teaser,
section:nth-of-type(9).teaser {
  border-bottom-color: $color_two;
}
section.slideshow + section.teaser {
  border-bottom-color: #ca2162;
}
section:last-of-type.teaser {
  border-bottom: 0px none;
}

section.teaser {
  margin: 0 !important;
  padding: 0 0 20px 0 !important;
  .emphasis {
    color: $color_soft_margin;
    font-weight: $semibold;
  }
  header.row {
    position: relative;
    margin-bottom: -5px;
    margin: 0 !important;
    padding: 0 !important;
    .slide-caption {
      background-color: $color_soft_margin;
    }
    a, a:hover {
      color: #fff;
    }
  }
  .twelve, .centered {
    text-align: center;
  }
}

/* Second Level Pages */
.bereichslayout,
.layout-ebene-drei {
  section.slideshow {
    header {
      min-height: 48px;
      img {
        margin-bottom: -7px;
      }
    }
    .slide-caption {
      bottom: 0;
    }
  }
}
body section:last-child {
  padding-bottom: 40px;
}

/* Teaser Image-Links for Subpages */
#teaser_group {
  margin-bottom: 20px;
  padding-right: 4.2%;
}
#teaser-group .teaser:nth-child(2),
#teaser-group .teaser:nth-child(5) {
  margin-left: 2%;
  margin-right: 2%;
}
#teaser-group .teaser {
  position: relative;
  max-width: 300px;
  max-height: 225px;
  width: 31.91%;
  margin-right: 0;
  margin-left: 0;
  margin-bottom: 20px;
  a {
    text-decoration: none;
    background-color: #222;
    img {
      width: 100%;
      height: 225px;
      display: block;
    }
    span {
      position: absolute;
      bottom: 0;
      left: 0;
      width: 100%;
      display: block;
      z-index: 500;
      text-align: center;
      font-size: 1.5em;
      font-weight: $semibold;
      color: #fff;
      line-height: 1.5em;
      padding: 5px 0;
      background: transparent url('/images/ail/heading_bg.png') repeat top left;
    }
  }
  a:hover {
    img {
      opacity: 0.8;
    }
    span {
      color: $color_one;
    }
  }
}

body section:last-child {
  padding-bottom: 20px;
}

body > footer {
  background-color: $color_footer;
  min-height: 300px;
  padding-top: 20px;
  margin-top: 40px;
  color: #fff;
  a {
    color: #fff;
    text-decoration: none;
  }
  ul, li {
    max-width: 180px;
  }
  .row > ul {
    width: 100%;
    max-width: none;
    .heading {
      float: left;
      margin-right: 1.5em;
      > a {
        font-weight: bold;
      }
    }
    ul {
      padding: 0;
      margin: 0.75em 0 0;
    }
    ul li {
      display: block;
      width: 100%;
      a {
        font-weight: normal;
      }
    }
  }
  .logo {
    position: relative;
    width: 200px;
    height: 130px;
    display: block;
    padding-top: 0.5em;
    background: transparent url('/images/ail/ail_logo_small.png') no-repeat 5px 0.5em;
    color: #fff;
    p {
      padding-top: 0.35em;
      padding-left: 88px;
      width: 100%;
      font-size: 0.9em;
      line-height: 1.2em;
      color: #fff;
    }
    .registered {
      position: absolute;
      bottom: 0;
      left: 0;
    }
  }
}

/* Move the Datepicker UI 'forward' */
body div.ui-datepicker {
  z-index: 2000 !important;
}

/* Adjustments to form */
li.field input + .picker {
  position: relative;
  top: 13px;
}

